# ubxlib

./: CMakeLists.txt
gnss/api/: u_gnss.h
port/platform/static_size/stubs/: u_port_clib_platform_specific.h
